@@ -2,27 +2,41 @@ package telran.java58.person.service;
 
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
+import org.springframework.boot.CommandLineRunner;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import telran.java58.person.dao.PersonRepository;
-import telran.java58.person.dto.AddressDto;
-import telran.java58.person.dto.CityPopulationDto;
-import telran.java58.person.dto.PersonDto;
+import telran.java58.person.dto.*;
 import telran.java58.person.dto.exception.PersonExistException;
 import telran.java58.person.dto.exception.PersonNotFoundException;
 import telran.java58.person.model.Address;
+import telran.java58.person.model.Child;
+import telran.java58.person.model.Employee;
 import telran.java58.person.model.Person;
 
+
 import java.time.LocalDate;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
-public class PersonServiceImpl implements PersonService {
+public class PersonServiceImpl implements PersonService, CommandLineRunner {
     private final PersonRepository personRepository;
     private final ModelMapper modelMapper;
+
+
+    public PersonDto determinatePersonInstance(Person person) {
+        if (person instanceof Child) {
+            return modelMapper.map(person, ChildDto.class);
+        }
+        if (person instanceof Employee) {
+            return modelMapper.map(person, EmployeeDto.class);
+        } else {
+            return modelMapper.map(person, PersonDto.class);
+        }
+    }
 
     @Override
     @Transactional
@@ -30,13 +44,19 @@ public class PersonServiceImpl implements PersonService {
         if (personRepository.existsById(personDto.getId())) {
             throw new PersonExistException();
         }
-        personRepository.save(modelMapper.map(personDto, Person.class));
+        if (personDto instanceof EmployeeDto) {
+            personRepository.save(modelMapper.map(personDto, Employee.class));
+        } else if (personDto instanceof ChildDto) {
+            personRepository.save(modelMapper.map(personDto, Child.class));
+        } else {
+            personRepository.save(modelMapper.map(personDto, Person.class));
+        }
     }
 
     @Override
     public PersonDto getPerson(int id) {
         Person person = personRepository.findById(id).orElseThrow(PersonNotFoundException::new);
-        return modelMapper.map(person, PersonDto.class);
+        return determinatePersonInstance(person);
     }
 
     @Override
@@ -44,7 +64,7 @@ public class PersonServiceImpl implements PersonService {
     public PersonDto deletePerson(int id) {
         Person person = personRepository.findById(id).orElseThrow(PersonNotFoundException::new);
         personRepository.delete(person);
-        return modelMapper.map(person, PersonDto.class);
+        return determinatePersonInstance(person);
     }
 
     @Override
@@ -52,7 +72,8 @@ public class PersonServiceImpl implements PersonService {
     public PersonDto updatePersonName(Integer id, String newName) {
         Person person = personRepository.findById(id).orElseThrow(PersonNotFoundException::new);
         person.setName(newName);
-        return modelMapper.map(person, PersonDto.class);
+//        personRepository.save(person);
+        return determinatePersonInstance(person);
     }
 
     @Override
@@ -60,19 +81,20 @@ public class PersonServiceImpl implements PersonService {
     public PersonDto updatePersonAddress(Integer id, AddressDto newAddress) {
         Person person = personRepository.findById(id).orElseThrow(PersonNotFoundException::new);
         person.setAddress(modelMapper.map(newAddress, Address.class));
-        return modelMapper.map(person, PersonDto.class);
+        return determinatePersonInstance(person);
     }
 
     @Override
+//    @Transactional(readOnly = true)
     public PersonDto[] findPersonsByNames(String name) {
         Person[] persons = personRepository.findAllByName(name);
-        return modelMapper.map(persons, PersonDto[].class);
+        return Arrays.stream(persons).map(this::determinatePersonInstance).toArray(PersonDto[]::new);
     }
 
     @Override
     public PersonDto[] findPersonsByCity(String city) {
         List<Person> persons = personRepository.searchAllByAddress_City(city);
-        return modelMapper.map(persons, PersonDto[].class);
+        return persons.stream().map(this::determinatePersonInstance).toArray(PersonDto[]::new);
     }
 
     @Override
@@ -80,17 +102,33 @@ public class PersonServiceImpl implements PersonService {
         LocalDate minDate = LocalDate.now().minusYears(minAge);
         LocalDate maxDate = LocalDate.now().minusYears(maxAge);
         Person[] persons = personRepository.findAllByBirthDateBetween(maxDate, minDate);
-        return modelMapper.map(persons, PersonDto[].class);
+        return Arrays.stream(persons).map(this::determinatePersonInstance).toArray(PersonDto[]::new);
     }
 
     @Override
     public Iterable<CityPopulationDto> getCitiesPopulation() {
-        List<String> addresses = personRepository.findAll()
-                .stream()
-                .map(p -> p.getAddress().getCity()).toList();
-        Map<String, Long> mapAddress = addresses.stream().collect(Collectors.groupingBy(city -> city, Collectors.counting()));
-        return mapAddress.entrySet()
-                .stream()
-                .map(city -> new CityPopulationDto(city.getKey(), city.getValue())).collect(Collectors.toList());
+        return personRepository.showCityPopulation();
+    }
+
+    @Override
+    public List<ChildDto> getAllChildren() {
+        List<Child> children = personRepository.findAllChildren();
+        return children.stream().map(child -> modelMapper.map(child, ChildDto.class)).toList();
+    }
+
+    @Override
+    public List<EmployeeDto> getEmployeesBySalary(int salaryFrom, int salaryTo) {
+        List<Employee> employeesBySalary = personRepository.findAllEmployeesBySalary(salaryFrom, salaryTo);
+        return employeesBySalary.stream().map(employee -> modelMapper.map(employee, EmployeeDto.class)).toList();
+    }
+
+    @Override
+    public void run(String... args) throws Exception {
+        if (personRepository.count() == 0) {
+            Person person = new Person(1000, "John", LocalDate.of(1985, 3, 11), new Address("Tel Aviv", "Ben Gvirol", 81));
+            Child child = new Child(2000, "Peter", LocalDate.of(2019, 7, 5), new Address("Ashkelon", "Bar Kohva", 21), "Shalom");
+            Employee employee = new Employee(3000, "Mary", LocalDate.of(1995, 11, 23), new Address("Rehovot", "Ben Herzl", 7), "Microsoft", 20000);
+            personRepository.saveAll(List.of(person, child, employee));
+        }
     }
 }
